--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -288,19 +288,18 @@ padding:5px 0;
 filter:grayscale(100%);
 -webkit-filter:grayscale(100%);
 filter:gray;
-filter:url("data:image/svg+xml;
-utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+filter:url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
 }
 section#sponsors a:hover img{
 filter:grayscale(0%);
 -webkit-filter:grayscale(0%);
-filter:url("data:image/svg+xml;
-utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
+filter:url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
 }
 footer{
 background-color:rgb(52, 52, 51);
 border-top:3px solid rgb(192, 52, 40);
 color:#FFF;
+padding: 0px 20px;
 }
 footer h3{
 font-size:16px;
